# spdcalc-ui

./: .editorconfig  .eslintrc.js  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  babel.config.js  bun.lockb  deploy.sh  eslintrc.json  index.html  jsconfig.json  manifest.json  netlify.toml  package.json  pnpm-lock.yaml  rsw.toml  vite.config.js  vue.config.js  wrangler.toml
.devcontainer/: devcontainer.json  post-create.sh  postCreate.sh
.netlify/: build.sh
.zed/: settings.json
@rsw/spdcalcwasm/: .rustfmt.toml  Cargo.toml
@rsw/spdcalcwasm/.cargo/: config.toml
@rsw/spdcalcwasm/src/: api.rs  lib.rs
assets/: index-280646a3.css  index-4af4182a.css  index-6916b5ca.css  index-9d70ebdd.css  index-d37befb3.css  index-e95ebdf0.css  spdcalc.worker-018fd4c0.js  spdcalc.worker-61266e01.js  spdcalc.worker-72203ceb.js  spdcalc.worker-8226bcd7.js  spdcalc.worker-89b90423.js  spdcalc.worker-9f6de6a7.js  spdcalc.worker-aa8140f5.js  spdcalc.worker-b3372f18.js  spdcalc.worker-b6d503a7.js  spdcalc.worker-b9c85282.js  spdcalc.worker-dcd5250a.js  spdcalc.worker-ddce191e.js  spdcalc.worker-de4f43ee.js  spdcalc.worker-fd62c828.js  spdcalcwasm_bg-11b4d403.wasm  spdcalcwasm_bg-149a43e4.wasm  spdcalcwasm_bg-19268280.wasm  spdcalcwasm_bg-21242779.wasm  spdcalcwasm_bg-2c1a86f3.wasm  spdcalcwasm_bg-31d905ce.wasm  spdcalcwasm_bg-6b893ba7.wasm  spdcalcwasm_bg-6d6c2d40.wasm  spdcalcwasm_bg-75ea4021.wasm  spdcalcwasm_bg-8dd85590.wasm  spdcalcwasm_bg-c0971441.wasm  spdcalcwasm_bg-dd53ef47.wasm  spdcalcwasm_bg-f3f637aa.wasm  spdcalcwasm_bg-f8402483.wasm
public/: index.html  manifest.json
(+134 files in other folders)
